--- a/SoftwareDeveloperAssessment/API/package.json
+++ b/SoftwareDeveloperAssessment/API/package.json
@@ -10,7 +10,7 @@
   "author": "Nithushan Selvanesan",
   "license": "ISC",
   "dependencies": {
-    "expresss": "^0.0.0",
+    "express": "^4.18.2",
     "sqlite3": "^5.1.6"
   }
 }
