--- a/SoftwareDeveloperApplication/API/package.json
+++ b/SoftwareDeveloperApplication/API/package.json
@@ -18,10 +18,12 @@
     "supertest": "^6.2.3"
   },
   "dependencies": {
+    "axios": "^1.4.0",
     "body-parser": "^1.20.0",
     "connect-mongo": "^4.6.0",
     "cors": "^2.8.5",
     "express": "^4.18.1",
+    "express-session": "^1.17.3",
     "mongoose": "^6.3.3",
     "swagger-jsdoc": "^6.2.1",
     "swagger-ui-express": "^4.4.0"
